avoid text overflow in tree view

--- a/src/eveg/AppBundle/Resources/assets/sass/evegTree.scss
+++ b/src/eveg/AppBundle/Resources/assets/sass/evegTree.scss
@@ -24,6 +24,7 @@ ul.fancytree-container ul {
 
 span.fancytree-title {
     white-space: normal;
+    padding-right: 30px;
 }
 
 .fancytree-treefocus {
